# rseq

./: .gitignore  BUILD.md  Cargo.toml  README-zh.md  README.md  SKILLS.md  SPEC-FIFO-REPORT.md
.cargo/: gpui-local.example.toml
crates/rseq/: Cargo.toml
crates/rseq-cli/: Cargo.toml
crates/rseq-cli/src/: main.rs  mock.rs
crates/rseq-gpui/: Cargo.toml  README.md
crates/rseq-gpui/src/: main.rs  plot.rs
crates/rseq-host/: Cargo.toml
crates/rseq-host/src/: lib.rs
crates/rseq-link/: Cargo.toml  README.md
crates/rseq-link/src/: crc32.rs  error.rs  frame.rs  lib.rs  tracing_bus.rs  transport.rs  wire.rs
crates/rseq-lsp/: Cargo.toml  README.md
crates/rseq-lsp/src/: lib.rs  main.rs
crates/rseq-mcu-sim/: Cargo.toml  README.md
crates/rseq-mcu-sim/src/: lib.rs  main.rs
crates/rseq-mcu-sim/tests/: loopback.rs
crates/rseq-tui/: Cargo.toml  README.md
crates/rseq-tui/src/: main.rs
crates/rseq-vm/: Cargo.toml
crates/rseq-vm/src/: bus.rs  lib.rs  opcode.rs  vm.rs
crates/rseq/src/: chip.rs  lib.rs  link.rs  trace.rs
editors/vscode-rseq/: README.md  extension.js  language-configuration.json  package.json  pnpm-lock.yaml
editors/vscode-rseq/snippets/: rseq.json
editors/vscode-rseq/syntaxes/: rseq.tmLanguage.json
examples/: qmi8660_init.rseq
mcu/f429zi-rseq/: CMakeLists.txt  Cargo.toml  README.md  app.overlay  prj.conf
mcu/f429zi-rseq/.cargo/: config.toml
mcu/f429zi-rseq/boards/: nucleo_f401re.overlay  nucleo_f429zi.overlay
mcu/f429zi-rseq/src/: lib.rs  zephyr_bus_ffi.c  zephyr_cdc_ffi.c
mcu/rseq-zephyr/: .gitignore  CMakeLists.txt  Cargo.toml  Kconfig  README.md  app.overlay  prj.conf
mcu/rseq-zephyr/boards/: nucleo_f401re.conf  nucleo_f401re.overlay  nucleo_f429zi.conf  nucleo_f429zi.overlay
mcu/rseq-zephyr/src/: lib.rs  zephyr_bus_ffi.c  zephyr_transport_ffi.c
skills/gpui-component/: SKILL.md
skills/jlink/: SKILL.md
skills/openocd/: SKILL.md
skills/packaging/: SKILL.md
skills/packaging/scripts/: package_macos_app.py  package_windows_app.py
skills/probe-rs/: SKILL.md
skills/rseq-project/: SKILL.md
skills/rust-mcu-dsl/: SKILL.md
skills/rust-mcu-dsl/agents/: openai.yaml
skills/rust-mcu-dsl/references/: architecture.md  mcu-runtime.md  validation.md
skills/rust-mcu-dsl/scripts/: new_rust_mcu_dsl.py
skills/serial/: SKILL.md
skills/serial/scripts/: serial_tcp_forward.py
skills/workflow/: SKILL.md
