
[workspace]
members = [
    "crates/rseq-vm",
    "crates/rseq-link",
    "crates/rseq",
    "crates/rseq-host",
    "crates/rseq-cli",
    "crates/rseq-tui",
    "crates/rseq-gpui",
    "crates/rseq-lsp",
    "crates/rseq-mcu-sim",
]
resolver = "2"

[workspace.package]
authors = ["leo"]
version = "0.1.0"
edition = "2024"
description = "Register Sequence DSL"
license = "MIT"
license-file = "LICENSE"
keywords = ["register", "sequence", "dsl", "i2c", "spi", "embedded"]
categories = ["embedded", "hardware", "hardware-agnostic"]
repository = "https://github.com/listentodella/rseq"

[workspace.dependencies]
rseq-vm = { path = "crates/rseq-vm" }
rseq-link = { path = "crates/rseq-link" }
rseq = { path = "crates/rseq" }
rseq-host = { path = "crates/rseq-host" }
