[package]
name = "rseq-cli"
description = "Register Sequence CLI tool"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "rseq"
path = "src/main.rs"

[features]
default = []

[dependencies]
rseq-vm = { workspace = true }
rseq = { workspace = true }
clap = { version = "4.6.1", features = ["derive"] }
