[package]
name = "rseq-cli"
description = "Register Sequence CLI tool"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "rseq"
path = "src/main.rs"

[features]
default = ["serial"]
# 串口下发到真实 MCU(--serial)。默认启用;纯主机回环(--execute)不依赖它。
serial = ["rseq-link/serial"]

[dependencies]
rseq-vm = { workspace = true }
rseq = { workspace = true }
rseq-host = { workspace = true }
# HostLink + SerialTransport,用于 --serial 模式下发字节码并收集 Trace。
rseq-link = { workspace = true, features = ["std"] }
clap = { version = "4.6.1", features = ["derive"] }
ariadne = { version = "0.6.0", features = ["auto-color"] }
