[package]
name = "rseq-gpui"
description = "GPUI workstation for Register Sequence reports and register control"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "rseq-gpui"
path = "src/main.rs"

[features]
default = ["serial"]
serial = ["rseq-host/serial", "rseq-link/serial"]

[dependencies]
rseq = { workspace = true }
rseq-host = { workspace = true }
rseq-lsp = { path = "../rseq-lsp" }
rseq-link = { workspace = true, features = ["std"] }
anyhow = "1"
clap = { version = "4.6.1", features = ["derive"] }
lsp-types = "0.97.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smol = "2"
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = [
    "font-kit",
    "runtime_shaders",
] }
gpui-component = { git = "https://github.com/longbridge/gpui-component.git", rev = "c9506e84109fb6cef4054d33766cdab5f75c04b6" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component.git", rev = "c9506e84109fb6cef4054d33766cdab5f75c04b6" }

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
gpui_platform = { git = "https://github.com/zed-industries/zed", features = [
    "font-kit",
    "runtime_shaders",
    "x11",
    "wayland",
] }
