[package]
name = "rseq-tui"
description = "Terminal dashboard for Register Sequence reports"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "rseq-tui"
path = "src/main.rs"

[features]
default = ["serial"]
serial = ["rseq-link/serial"]

[dependencies]
rseq = { workspace = true }
rseq-host = { workspace = true }
rseq-link = { workspace = true, features = ["std"] }
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29"
ratatui = { version = "0.30.2", features = ["crossterm_0_29"] }
