[package]
name = "rseq"
description = "Register Sequence DSL — host-side compiler, chip dictionary, and MockBus"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []

[dependencies]
rseq-vm = { workspace = true }
# 主机侧链路驱动(HostLink)复用 rseq-link 的帧编解码与 Transport 抽象;
# 启用 std 以便单测直接用 MockTransport 做回环。
rseq-link = { workspace = true, features = ["std"] }
toml = "1.1.2"
serde = { version = "1", features = ["derive"] }
logos = "0.16.1"
chumsky = "1.0.0-alpha.8"
ariadne = { version = "0.6.0", features = ["auto-color"] }
serde_yaml = "0.9.34"
